--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "@tsconfig/node16": "1.0.3",
     "@types/jest": "29.2.5",
     "@types/node": "16.18.11",
+    "@types/node-fetch": "2.6.2",
     "@typescript-eslint/eslint-plugin": "5.48.1",
     "@typescript-eslint/parser": "5.48.1",
     "@vercel/ncc": "0.36.0",
@@ -17,6 +18,10 @@
     "typescript": "4.9.4"
   },
   "workspaces": [
+    "common",
     "*"
-  ]
+  ],
+  "dependencies": {
+    "node-fetch": "2.6.8"
+  }
 }
