--- a/.github/workflows/build_create-branch-config.yaml
+++ b/.github/workflows/build_create-branch-config.yaml
@@ -34,6 +34,7 @@ jobs:
           APP_NAME: ${{ secrets.APP_NAME }}
           BRANCH: ${{ github.ref_name }}
           CONFIG: ${{ secrets.CONFIG }}
+          directory: build_create-branch-config
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
