--- a/.github/workflows/build_create-branch-config.yaml
+++ b/.github/workflows/build_create-branch-config.yaml
@@ -26,6 +26,8 @@ jobs:
     runs-on: ubuntu-latest
     timeout-minutes: 10
     steps:
+      - uses: actions/checkout@v3
+      - run: ls
       - name: Make envfile
         uses: SpicyPizza/create-envfile@v1.3
         with:
@@ -35,7 +37,6 @@ jobs:
           BRANCH: ${{ github.ref_name }}
           CONFIG: ${{ secrets.CONFIG }}
           directory: build_create-branch-config
-      - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
           node-version: 16
