--- a/.github/workflows/build_create-branch-config.yaml
+++ b/.github/workflows/build_create-branch-config.yaml
@@ -30,11 +30,14 @@ jobs:
       - run: pwd
       - run: ls
       - name: Make envfile
-        run: echo "API_TOKEN=" + ${{ secrets.API_TOKEN }} >> .env && \
-             echo "OWNER_NAME=" + ${{ secrets.OWNER_NAME }} >> .env && \
-             echo "APP_NAME=" + ${{ secrets.APP_NAME }} >> .env && \
-             echo "BRANCH=" + ${{ github.ref_name }} >> .env && \
-             echo "CONFIG=" + ${{ secrets.CONFIG }} >> .env
+        run: |
+         touch .env
+         echo API_TOKEN=${{ secrets.API_TOKEN }} >> .env && \
+         echo OWNER_NAME=${{ secrets.OWNER_NAME }} >> .env && \
+         echo APP_NAME=${{ secrets.APP_NAME }} >> .env && \
+         echo BRANCH=${{ github.ref_name }} >> .env && \
+         echo CONFIG=${{ secrets.CONFIG }} >> .env
+         cat .env
       - run: pwd 
       - run: ls
       - uses: actions/setup-node@v3
