--- a/.github/workflows/build_create-branch-config.yaml
+++ b/.github/workflows/build_create-branch-config.yaml
@@ -36,7 +36,7 @@ jobs:
          echo OWNER_NAME=${{ secrets.OWNER_NAME }} >> .env && \
          echo APP_NAME=${{ secrets.APP_NAME }} >> .env && \
          echo BRANCH=${{ secrets.BRANCH }} >> .env && \
-         echo CONFIG=${{ env.CONFIG }} >> .env
+         echo CONFIG=${{ vars.CONFIG }} >> .env
          cat .env
       - run: pwd 
       - run: ls -a
