--- a/common/package.json
+++ b/common/package.json
@@ -9,7 +9,8 @@
     "format-check": "prettier --check **/*.ts",
     "lint": "eslint **/*.ts",
     "package": "ncc build --source-map --license licenses.txt",
-    "test": "jest"
+    "test": "jest",
+    "ci:package": "yarn build && yarn package"
   },
   "dependencies": {
     "@actions/core": "1.10.0"
