--- a/.github/workflows/build_create-branch-config.yaml
+++ b/.github/workflows/build_create-branch-config.yaml
@@ -50,10 +50,10 @@ jobs:
         uses: ./build_create-branch-config
         with:
           API_TOKEN: ${{ secrets.API_TOKEN }}
-          OWNER_NAME: ${{ secrets.OWNER_NAME }}
-          APP_NAME: ${{ secrets.APP_NAME }}
-          BRANCH: ${{ secrets.BRANCH }}
-          CONFIG: ${{ secrets.CONFIG }}
+          OWNER_NAME: ${{ vars.OWNER_NAME }}
+          APP_NAME: ${{ vars.APP_NAME }}
+          BRANCH: ${{ vars.BRANCH }}
+          CONFIG: ${{ vars.CONFIG }}
 
 #  generate:
 #    runs-on: ubuntu-latest
