--- a/.github/workflows/build_get-branch-config.yaml
+++ b/.github/workflows/build_get-branch-config.yaml
@@ -49,9 +49,9 @@ jobs:
         uses: ./build_get-branch-config
         with:
           API_TOKEN: ${{ secrets.API_TOKEN }}
-          OWNER_NAME: ${{ secrets.OWNER_NAME }}
-          APP_NAME: ${{ secrets.APP_NAME }}
-          BRANCH: ${{ secrets.BRANCH }}
+          OWNER_NAME: ${{ vars.OWNER_NAME }}
+          APP_NAME: ${{ vars.APP_NAME }}
+          BRANCH: ${{ vars.BRANCH }}
 
 #  generate:
 #    runs-on: ubuntu-latest
