feat(build_update): use a json path instead json itself

--- a/build_update-branch-config/action.yaml
+++ b/build_update-branch-config/action.yaml
@@ -14,7 +14,7 @@ inputs:
   BRANCH:
     description: The App Center branch
     required: true
-  CONFIG:
+  CONFIG_FILE:
     description: The App Center config
     required: true
 
