--- a/build_update-branch-config/action.yaml
+++ b/build_update-branch-config/action.yaml
@@ -14,7 +14,7 @@ inputs:
   BRANCH:
     description: The App Center branch
     required: true
-  CONFIG_FILE:
+  CONFIG_PATH:
     description: The App Center config
     required: true
 
